--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
     <div class="card">
         <p class="greeting">Hello, I'm</p>
         <h1>Mo Bashagha</h1>
-        <p class="bio">A short sentence or two about who you are and what you do. Keep it simple.</p>
+        <p class="bio">Currently designing WhatsApp.</p>
 
         <div class="divider"></div>
 
